# sql-db-set-macros

./: Cargo.toml  Makefile  README.md
tests/: Cargo.toml
tests/.sqlx/: query-135503a65cc2cde762277dcb6c4ca12a173beb78af05dd447b73f02df02b512a.json  query-1b9642cb19f2ce7ec772585175e80124993fe5c318ce0fa73c355f59119851a9.json  query-3430681b2b647a7a84535150fc9b312d8384facf431ddd9c2adb5e1581c4c075.json  query-35da43e71ee257f458daea68eb37fedc167f8a8565bd3a2b3a90d820736a6cf1.json  query-35fd7d9738d9993915aa883051dc4c9b61383bbbc7082c71e64068b538293817.json  query-4e912343d6690e59ab36c1c3bb01976e5db5131d83b722789dd4c24f71d15e42.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-888bcabc7f6d24189477813afbe17cb401954e924e95482b28d50c17667cd6cb.json  query-89838d5764888020158aed7ad00b37b8354bf873846548cd2850f2f5ec7eee93.json  query-920420e5eb087027e71148c3fa152ef922679f9bf7b3305fad38f5a38725abbd.json  query-9b0a70ba3ca4df50b3b860f5ba3032a13535e5f820ac0e3820d6d9a10d9c2e09.json  query-9c48195d99fef65e868afe441f160ad631bc4878953c09e9316763e2fe12413e.json  query-9e0aa06fcc133a41e55a7e09b6a7db741a0670028573b30da57b65a82dfc4f6a.json  query-a28a98cd3fc0eb075f98b5eb06a0e3490c7c4b6aabcd6b40fbb5dffa74b3326b.json  query-afebaf1e1b8236bc9ae2fd5e038cdd21edb81eb12e93ff8f04a9949c30e4e3b5.json  query-bed722a9faeffd300d82672c517837b4e13047a180273f4ce1794eadb4f90f85.json  query-c150c28b637ec4f3f2b657e54add886155a44a6c82e51131b8a9318287dc2222.json  query-c79bcd42f8bf07525dac92b572c5170eb889f494365b310d80d93e752b5ae3bb.json  (+10 more)
tests/src/: harness.rs  lib.rs  (+1 more)
(+51 files in other folders)
