[lib]
proc-macro = true

[package]
name = "db-set-macros"
version = "0.1.3"
edition = "2021"
description = "A derive for some ORM functions utilising SQLX"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
convert_case = "0.8.0"
pretty_assertions = "1.4.1"
prettyplease = "0.2.25"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.85"
