[package]
name = "tests"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
testcontainers = { version ="0.15.0" }
testcontainers-modules = { version = "0.3.5", features = ["postgres"] }
db-set-macros = { path = '../'}
sqlx = {version = "0.8.2", features=["postgres","runtime-tokio", ]}
serde = "1.0.214"
serde_derive = "1.0.214"

